2006-12-04 [paul]	0.0.8

	0.0.8 released

2006-11-28 [paul]	0.0.7cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.0.7cvs2

	* README
	* src/newmail.c
		renaming

2006-11-07 [paul]	0.0.7cvs1

	* ChangeLog
	* INSTALL
	* NEWS
	* README
	* configure.ac
	* src/Makefile.am
	* src/newmail.c
		Name change

2006-09-25 [paul]	0.0.7

	0.0.7 released

2006-09-22 [ticho]	0.0.6cvs4

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	0.0.6cvs3

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [colin]	0.0.6cvs2

	* src/newmail.c
		Implement plugin_provides()

2006-08-18 [paul]	0.0.6cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.0.6

	0.0.6 released

2006-06-06 [wwp]	0.0.5cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/newmail.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.0.5cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.05

	* src/newmail.c
		Updated claws-mail product name.

2006-04-07 [colin] 	0.04

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2005-12-15 [paul]	0.03

	* Add plugin_version()

2005-12-07 [colin]      0.02

	* Add plugin_licence()
	
2005-11-04 [merijn]	0.01

	* initial release