@@ -7,7 +7,7 @@ dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=0
 MICRO_VERSION=8
-EXTRA_VERSION=0
+EXTRA_VERSION=1
 
 if test \( $EXTRA_VERSION -eq 0 \); then
     if test \( $MICRO_VERSION -eq 0 \); then
@@ -44,7 +44,7 @@ PKG_CONFIG_PATH=$PKG_CONFIG_PATH:${prefix}/lib:${prefix}/lib/pkgconfig
 AC_SUBST(PKG_CONFIG_PATH)
 
 dnl check for claws-mail
-PKG_CHECK_MODULES(CLAWS_MAIL, claws-mail >= 2.6.0.64)
+PKG_CHECK_MODULES(CLAWS_MAIL, claws-mail >= 2.6.1.41)
 if test -z $prefix || test "${prefix}" == "NONE" ; then
   prefix=$( $PKG_CONFIG --variable=prefix claws-mail )
   CLAWS_MAIL_PLUGINDIR=$( $PKG_CONFIG --variable=plugindir claws-mail )
