@@ -1,3 +1,9 @@
+2006-12-15 [ticho]	0.0.8cvs1
+
+	* configure.ac
+	* src/newmail.c
+		Use check_plugin_version() for version check.
+
 2006-12-04 [paul]	0.0.8
 
 	0.0.8 released
